@@ -290,9 +290,9 @@ table.money td.col7			{background-color:rgba(17, 101, 105, 0.6);}
 
 table.money tr.row1 th		{background-color:transparent; color:#FFF; font-weight:700; text-align:center; padding:0px; position:relative;}
 table.money tr.row1 th:hover{cursor:pointer;}
-table.money tr.row1 th span	{color:#fff; display:block; padding:20px 10px;}
+table.money tr.row1 th span	{color:#FFF; display:block; padding:20px 10px;}
 table.money tr.row1 th.col1	{background-color:rgba(74, 82, 54, 0.9); padding:20px 10px; text-align:left; border:1px solid rgba(74, 87, 43, 1); border-bottom:1px solid #1E90FF;}
-table.money tr.row1 th.col2	{text-align:left; border-bottom:1px solid #1E90FF; padding:20px 15px;}
+table.money tr.row1 th.col2	{text-align:left; border-bottom:1px solid #1E90FF; padding:20px 15px; border-top:1px solid #1E90FF;}
 table.money tr.row1 th.col3	{background-color:rgba(17, 46, 105, 0.9); border:1px solid rgba(0, 50, 151, 1); border-bottom:1px solid #1E90FF;}
 table.money tr.row1 th.col4	{background-color:rgba(17, 101, 105, 0.9); border:1px solid rgba(7, 117, 122, 1); border-bottom:1px solid #1E90FF;}
 
