@@ -1,7 +1,8 @@
 Development Portal (2014-11-18 shi)
 ==============================
-Bug fix for CRS table header
-Bug fix for colours, border and headers in High Vis
+CSS fix for CRS table header
+CSS fix for colours, border and headers in High Vis
+CSS fix for all publishers table headers
 
 
 Development Portal (2014-11-14 shi)
